--- a/Bitacora/index.html
+++ b/Bitacora/index.html
@@ -8,42 +8,94 @@
      <title>Bitacora de Clase</title>
     </head>
 
-    <!--Con "<H1>" creamos un encabezado de tamaño más grande. Se hace más pequeño a medida que incrementas desde el 1
-    al 6 (H2, H3, H4, H5, H6)-->
-    <h1>Bitacora de clase</h1>
-    <h2>Repaso de lo que vimos</h2>
-
-    <!--La etiqueta "<HR>" crea una delgada linea que se podria interpretar como una división.-->
-    <hr>
-
-    <!--"<P>" como su inicial lo describe: es la etiqueta de parrafo. Lleva un atributo llamado "align" que sirve para
-    alinear un texto. En este código, esta centrado.-->
-    <p align="center">
-        01/02/23
-    </p>
-
-    <!--Encabezado de tamaño 3-->
-    <h3>Lenguaje HTML</h3>
     <!--Este contiene TODO el cuerpo de la pagina, o sea, todo lo que abarca la página web. Solo se usa uno.-->
     <body>
-        <!--Etiqueta de parrafo.-->
-        <p>
-            <!--La etiqueta "<STRONG>" simplemente funciona para poner en negritas o resaltar más palabras importantes de un texto.-->
-            HTML es un programa de tipeado con la estructura de un lenguaje de programacion, pero que en sí, no funciona como uno. Tal como su nombre indica <strong> Hypertext Marking Language </strong> <br>
-            o en español <strong> Lenguaje Marcado de Hipertexto </strong> solo es un idioma de marcado. Su versión más actualizada que es HTML5 es una versión estándar del programa, con estandar quiere <br>
-            decir que es sólo el patrón de referencia; sin embargo, no es un programa profesional. Se maneja a base de etiquetas y sirve principalmente para el diseño de paginas web junto con CSS y Javascript.
-        <!--Cierre de etiqueta de parrafo.-->
+        <!--H1 que afectará al tamaño de la etiqueta "<P>" que contiene un alineado al centro.-->
+        <h1>
+            <p align="center">
+                Bitacora de clase
+            </p>
+        </h1>
+        <hr>
+    
+        <!--H4 que afectará al tamaño de la etiqueta "<P>" que contiene una fecha y alineado a la derecha.-->
+        <h4>
+            <p align="right">
+                01/02/23
+            </p>
+        </h4>
+
+        <!--H3 que afectará al tamaño de la etiqueta "<P>" que contiene un alineado al centro con el titulo.-->
+        <h3>
+            <p align="center">
+                Lenguaje HTML
+            </p>
+        </h3>
+
+        <!--Los parrafos contienen un alineado "Justify" que provoca que el texto no se vea desacomodado o vaya más allá
+        de la ventana, o sea, se salga de lugar-->
+        <p align="justify">
+            HTML es un programa de tipeado con la estructura de un lenguaje de programacion, pero que en sí, no funciona como uno. Tal como su 
+            nombre indica <strong>Hypertext Marking Language</strong> o en español <strong>Lenguaje Marcado de Hipertexto</strong> solo es un 
+            idioma de marcado. Su versión más actualizada que es HTML5 es una versión estándar del programa, con estandar quiere decir que es
+            sólo el patrón de referencia; sin embargo, no es un programa profesional. Se maneja a base de etiquetas y sirve principalmente para 
+            el diseño de paginas web junto con CSS y Javascript.
+        </p>    
+        <p align="justify">
+            El significado de sus siglas refiere a que, en primera, <strong>HyperText</strong> que es un "hipertexto", es basicamente un texto 
+            que enlaza a otros contenidos ya sean, sitios web, videos, citas.
+            <strong>Markup</strong> son las etiquetas con las que hace funcionar el programa, cuyas etiquetas comienzan un parrafo, construyen 
+            ese parrafo y se cierra. Y finalmente <strong>Language</strong> es porque, sencillamente, HTML es un lenguaje.
         </p>
-        <p>
-            El significado de sus siglas refiere a que, en primera, <strong>HyperText</strong> que es un "hipertexto", es basicamente un texto que enlaza a otros contenidos ya sean, sitios web, videos, citas.<br>
-            <strong>Markup</strong> son las etiquetas con las que hace funcionar el programa, cuyas etiquetas comienzan un parrafo, construyen ese parrafo y se cierra. Y finalmente <strong>Language</strong> es <br>
-            porque, sencillamente, HTML es un lenguaje.
-        </p>
-        <p>
+        <p align="justify">
             HTML maneja un "esqueleto" o estructura que se conforman mediante el siguiente orden de etiquetas basico: html, head, body, footer. 
         </p>
-        <!--Para poner una imagen simple, se usa la etiqueta "<IMG>" con su atributo "src" (source) en donde agregamos la ubicación en donde se encuentra la foto.
-        En este caso, lleva el nombre de su carpeta y con ella el nombre la foto junto con su extensión PNG-->
-        <img src="Imagenes/HTML.png"/>
+
+        <!--La imagen está centrada.-->
+        <center>
+            <!--Ubicación de la imagen, pero con un atributo de titulo que aparece en forma de cuadro cuando pones el cursor encima.-->
+            <img src="Imagenes/HTML.png" title="HTML5"/>
+        </center>
+
+        <hr> <!-- Separador 02/02/2023 -->
+
+        <!--H4 que afecta al parrafo con fecha.-->
+        <h4>
+            <p align="right">
+                02/02/23
+            </p>
+        </h4>
+
+        <h3>
+            <p align="center">
+                GitHub
+            </p>
+        </h3>
+
+        <!--Parrafos justificados.-->
+        <p align="justify">
+            Hoy aprendimos a usar GitHub. Es una página que está principalmente diseñada y dirigida a programadores, hecha para subir sus codigos
+            , gestionarlos y actualizarlos. Funciona como un almacenador de trabajos que puedes compartir para cooperar con otros desarrolladores
+            o bien, mantener tus codigos en privado. Los usuarios pueden incluso crear equipos u organizaciones e invitar a otros usuarios.
+        </p>
+        <p align="justify">
+            Principalmente nos enseñaron a crear un nuevo repositorio, que en resumen, es basicamente el almacenador de tus trabajos, conteniendo
+            todos y cada uno de estos junto con las versiones de los mismos acorde a lo que actualices. Cada archivo que se suba tiene que traer
+            consigo su versión junto con la descripción del mismo en donde se redacte qué fue lo que hicimos en cada actualizacion del codigo. GitHub
+            muestra, en lineas rojas, las tiras que fueron removidas y en verde lo nuevo que implementó el usuario.
+        </p>
+        <p align="justify">
+            Volvimos a repasar el tema de las metodologias, una de ellas Cascada y su funcionamiento.
+        </p>
+
+        <!--Imagen centrada.-->
+        <center>
+            <!--Ubicación de la imagen que contiene un titulo. Además, un ancho de 200-->
+            <img src="Imagenes/GitHub.png" title="Logo de GitHub" width="200"/>
+        </center>
+
+    <!--Cierre de la etiqueta "<BODY>"-->
     </body>
-    
+
+<!--Cierre de la etiqueta "<HTML>"-->
+</html>  
