--- a/Bitacora/index.html
+++ b/Bitacora/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html >
 <!--Abarcamos con la etiqueta "<HTML>" el cual es la base de toda la estructura de nuestro sitio web.-->
 <html>
-    <!--La etiqueta "<HEAD>" refiere al titulo de nuestro sitio web y a la información general del mismo.-->
+     <!--La etiqueta "<HEAD>" refiere al titulo de nuestro sitio web y a la información general del mismo.-->
     <head>
         <!--desde la etiqueta "<TITLE>" se pone el nombre de nuestra página.-->
      <title>Bitacora de Clase</title>
@@ -16,6 +16,7 @@
                 Bitacora de clase
             </p>
         </h1>
+        <!--Linea divisora.-->
         <hr>
     
         <!--H4 que afectará al tamaño de la etiqueta "<P>" que contiene una fecha y alineado a la derecha.-->
@@ -24,7 +25,7 @@
                 01/02/23
             </p>
         </h4>
-
+    
         <!--H3 que afectará al tamaño de la etiqueta "<P>" que contiene un alineado al centro con el titulo.-->
         <h3>
             <p align="center">
@@ -50,8 +51,7 @@
         <p align="justify">
             HTML maneja un "esqueleto" o estructura que se conforman mediante el siguiente orden de etiquetas basico: html, head, body, footer. 
         </p>
-
-        <!--La imagen está centrada.-->
+        <!--Imagen centrada.-->
         <center>
             <!--Ubicación de la imagen, pero con un atributo de titulo que aparece en forma de cuadro cuando pones el cursor encima.-->
             <img src="Imagenes/HTML.png" title="HTML5"/>
@@ -87,11 +87,44 @@
         <p align="justify">
             Volvimos a repasar el tema de las metodologias, una de ellas Cascada y su funcionamiento.
         </p>
-
         <!--Imagen centrada.-->
         <center>
             <!--Ubicación de la imagen que contiene un titulo. Además, un ancho de 200-->
             <img src="Imagenes/GitHub.png" title="Logo de GitHub" width="200"/>
+        </center>
+
+        <hr> <!-- Separador 09/02/2023 -->
+
+        <!--Encabezados.-->
+        <h4>
+            <p align="right">
+                09/02/23
+            </p>
+        </h4>
+
+        <h3>
+            <p align="center">
+                CSS
+            </p>
+        </h3>
+
+        <!--Parrafos justificados.-->
+        <p align="justify">
+            CSS (<strong>Cascading Style Sheets</strong>) es un lenguaje modelado o un lenguaje de diseño gráfico que en español
+            refiere a "hojas estilo cascada" y se le denomina así porque las caracteristicas se aplican de arriba a abajo. Es un
+            lenguaje que complementa al tipado antes mencionado HTML y principalmente sirve como un idioma que nos permite darle
+            una mejor interfaz a nuestra página web desde el uso de colores, tipo de fuente, tamaños, etc.
+        </p>
+
+        <p align="justify">
+            Una vez entendiendo el concepto del lenguaje CSS, el maestro nos pidió analizar la interfaz de Gmail para en parte
+            comprender que o cuantas cajas conlleva la pagina, ademas de el cuidado uso de colores que creo fue visto desde un lado más teorico.
+            El modelo de caja en CSS define figuras rectangulares, incluyendo su relleno y margenes.
+        </p>
+
+        <center>
+            <!--Ubicación de la imagen que contiene un titulo. Además, un ancho de 180-->
+            <img src="Imagenes/CSS3.png" title="CSS" width="180"/>
         </center>
 
     <!--Cierre de la etiqueta "<BODY>"-->
