--- a/Bitacora/index.html
+++ b/Bitacora/index.html
@@ -4,24 +4,28 @@
 <html>
      <!--La etiqueta "<HEAD>" refiere al titulo de nuestro sitio web y a la información general del mismo.-->
     <head>
-        <!--desde la etiqueta "<TITLE>" se pone el nombre de nuestra página.-->
+     <!--desde la etiqueta "<TITLE>" se pone el nombre de nuestra página.-->
      <title>Bitacora de Clase</title>
+     <!--La etiqueta "<LINK>" se usa para establecer la conexión entre el programa actual y uno externo.
+    Con "stylesheet" se refiere a una hoja de estilo que sirve para diseñar la pagina web y el atributo "href" es
+    basicamente en donde se encuentra ubicado el archivo que queremos implementar.-->
+     <link rel="stylesheet" href="Styles/style.css"/>
     </head>
 
     <!--Este contiene TODO el cuerpo de la pagina, o sea, todo lo que abarca la página web. Solo se usa uno.-->
     <body>
-        <!--H1 que afectará al tamaño de la etiqueta "<P>" que contiene un alineado al centro.-->
-        <h1>
-            <p align="center">
+        <!--H1 que afectará al tamaño del texto de la etiqueta "<HEADER>" que contiene un alineado al centro.-->
+        <header>
+            <h1 align="center">
                 Bitacora de clase
-            </p>
-        </h1>
-        <!--Linea divisora.-->
-        <hr>
+            </h1>
+        </header>
     
         <!--H4 que afectará al tamaño de la etiqueta "<P>" que contiene una fecha y alineado a la derecha.-->
         <h4>
-            <p align="right">
+            <!--La etiqueta "<P>" ahora conlleva una clase llamada "fecha" que se podría utilizar para especificar
+            mejor que acciones o diseños implementar a la etiqueta desde CSS.-->
+            <p class="fecha">
                 01/02/23
             </p>
         </h4>
@@ -61,7 +65,7 @@
 
         <!--H4 que afecta al parrafo con fecha.-->
         <h4>
-            <p align="right">
+            <p class="fecha">
                 02/02/23
             </p>
         </h4>
@@ -93,12 +97,12 @@
             <img src="Imagenes/GitHub.png" title="Logo de GitHub" width="200"/>
         </center>
 
-        <hr> <!-- Separador 09/02/2023 -->
+        <hr> <!-- Separador 08/02/2023 -->
 
         <!--Encabezados.-->
         <h4>
-            <p align="right">
-                09/02/23
+            <p class="fecha">
+                08/02/23
             </p>
         </h4>
 
@@ -123,12 +127,40 @@
         </p>
 
         <center>
-            <!--Ubicación de la imagen que contiene un titulo. Además, un ancho de 180-->
+             <!--Ubicación de la imagen que contiene un titulo. Además, un ancho de 180-->
             <img src="Imagenes/CSS3.png" title="CSS" width="180"/>
         </center>
+
+        <hr> <!-- Separador 09/02/2023 -->
+
+         <!--Encabezados.-->
+        <h4>
+            <p class="fecha">
+                09/02/23
+            </p>
+        </h4>
+
+        <h3>
+            <p align="center">
+                Como usar CSS
+            </p>
+        </h3>
+
+         <!--Texto justificado-->
+        <p align="justify">
+            Anteriormente habiamos visto como funcionaba CSS. En esta clase aprendimos y aplicamos algunas de sus funciones.
+            Algunas de ellas fueron: cambiar el tamaño de la fuente, asociar enlaces de internet (o referencias), cambiar el
+            color de los parrafos; lo que es un selector, propiedad y valor de propiedad. Cómo crear bordes, cómo seleccionar
+            varios elementos para al final tener una idea de cómo es crear un diseño para una página web.
+        </p>
+        <p>
+            Conocimos una página web que se llama "Bootstrap" y sirve principalmente como apoyo para la creación de una pagina
+            web
+        </p>
+
 
     <!--Cierre de la etiqueta "<BODY>"-->
     </body>
 
 <!--Cierre de la etiqueta "<HTML>"-->
-</html>  
+</html> 
