--- a/Bitacora/index.html
+++ b/Bitacora/index.html
@@ -146,21 +146,29 @@
             </p>
         </h3>
 
-         <!--Texto justificado-->
+        <!--Texto justificado.-->
         <p align="justify">
             Anteriormente habiamos visto como funcionaba CSS. En esta clase aprendimos y aplicamos algunas de sus funciones.
             Algunas de ellas fueron: cambiar el tamaño de la fuente, asociar enlaces de internet (o referencias), cambiar el
             color de los parrafos; lo que es un selector, propiedad y valor de propiedad. Cómo crear bordes, cómo seleccionar
             varios elementos para al final tener una idea de cómo es crear un diseño para una página web.
         </p>
+
+        <p>
+            CSS se maneja de selectores, que escogen ciertas etiquetas que incluimos en el HTML, en incluso clases que pueden
+            tener esas mismas etiquetas. Por ejemplo: <strong>el header, body, h1, p</strong>, etc. Los atributos de cada etiqueta
+            se ponen dentro de llaves y a traves de ellas es cuando puedes diseñar el tamaño de letra, fuentes, agregar bordes
+            y distintos tipos de herramientas que ayudaran  a darle un enfoque más detallado a tu pagina web.
+
+        </p>
+
         <p>
             Conocimos una página web que se llama "Bootstrap" y sirve principalmente como apoyo para la creación de una pagina
             web
         </p>
 
-
     <!--Cierre de la etiqueta "<BODY>"-->
     </body>
 
 <!--Cierre de la etiqueta "<HTML>"-->
-</html> 
+</html>  
