--- a/Bitacora/index.html
+++ b/Bitacora/index.html
@@ -167,6 +167,31 @@
             web
         </p>
 
+        <hr> <!-- Separador 15/02/2023 -->
+
+         <!--Encabezados.-->
+        <h4>
+            <p class="fecha">
+                15/02/23
+            </p>
+        </h4>
+
+        <h3>
+            <p align="center">
+                Recomendaciones sobre Diseño Web
+            </p>
+        </h3>
+
+        <!--Texto justificado.-->
+        <p align="justify">
+            En clases, el profe paso a 5 personas a mostrar mediante conferencia el diseño de su página web y a base de ello
+            darnos algunas sugerencias. Algunas que recuerdo son que: no debemos usar colores que sean muy agobiantes para la vista
+            (colores muy fuertes), usar un tipo de imagenes que tengan fondo transparente, darle un toque más serio como si lo 
+            fueramos a mostrar a alguna empresa por ejemplo, no tener los parrafos centrados sino justificados, que no se salgan
+            del margen, usar un tamaño de fuente más apto para el usuario; que no sea imposible de leer. Tener un enfoque más minimalista
+            en cuanto a diseño se trata: no poner una gran variedad de colores o imagenes, ni cosas que llenen exageradamente de detalles, sino
+            que se vea simple y agradable a la vista.
+        </p>
     <!--Cierre de la etiqueta "<BODY>"-->
     </body>
 
