--- a/Bitacora/index.html
+++ b/Bitacora/index.html
@@ -10,6 +10,7 @@
     Con "stylesheet" se refiere a una hoja de estilo que sirve para diseñar la pagina web y el atributo "href" es
     basicamente en donde se encuentra ubicado el archivo que queremos implementar.-->
      <link rel="stylesheet" href="Styles/style.css"/>
+     <link rel="preconnect" href="https://fonts.googleapis.com">
     </head>
 
     <!--Este contiene TODO el cuerpo de la pagina, o sea, todo lo que abarca la página web. Solo se usa uno.-->
@@ -221,6 +222,34 @@
             <div class="img-javascript">
                 <img src="Imagenes/JavaScript.png" alt="Javascript" width="180">
             </div>
+        </section>
+
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">21/02/2023</p>
+        <!--Seccion JAVASCRIPT-->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion-javascript">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Planteamiento de un Sistema
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    En clase vimos sobre cómo se elabora un sistema comenzando con ideas que se llevan a cabo antes de plantear un proyecto. Parte de los
+                    ejemplos que puede tener un sistema web (de forma general) es: login, barra de busqueda, página de inicio, perfil, menu, dominio o host,
+                    base de datos, publicidad, que sea intuitivo y probablemente un largo etc. Lo más recomendable también a la hora de crear un proyecto es
+                    colaborar con alguien que tenga ideas que podrian ser innovadoras dentro del ambito tecnologico.
+                    <br><br>
+                    Nos explico los pasos que siguen después de un login, que es cuando el usuario no solo se crea una cuenta, sino también un identificador.
+                    De manera tecnica se le llama "formulario" pues el proceso de un registro es a base de responder preguntas y desde html hemos comenzado a 
+                    elaborar uno con los requisitos que usualmente suele pedir tales como usuario, contraseña, email... Lo más fundamental al momento de 
+                    codificar un login es que tiene que ser lo más sencillo y entedible posible para la comprension del usuario siendo esta lo más explicita
+                    posible.
+                </p>
+
         </section>
 
 
