--- a/Bitacora/index.html
+++ b/Bitacora/index.html
@@ -252,6 +252,30 @@
 
         </section>
 
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">22/02/2023</p>
+        <!--Seccion JAVASCRIPT-->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion-javascript">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Elaboración de Login
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    Hoy seguimos creando un diseño para la pagina de login, el formulario y el index que seria la pagina principal. El formulario debe
+                    contener los siguentes campos que son apellido maternos y paterno, fecha de nacimiento, el correo, telefono, pais, estado, municipio
+                    y contraseña. Analizamos los componentes del login que son usuario y contraseña, un vinculo que lleva a la pagina de registro en caso 
+                    de que el usuario no tenga una cuenta. Al final analizamos que falta poner otro enlace donde el usuario en la posibilidad de no recordar
+                    su contraseña, puede recuperarla a través de otro formulario en donde solo pediría el correo, el user y el telefono. Repasamos los 
+                    casos de uso que refieren a las necesidades de usuario
+                </p>
+
+        </section>
+
 
         <!--Pie de Pagina con nombre de la organizacion.-->
         <footer class="pie-pagina">
