--- a/Bitacora/index.html
+++ b/Bitacora/index.html
@@ -228,7 +228,7 @@
 
         <!--Fecha-->
         <p class="fecha">21/02/2023</p>
-        <!--Seccion JAVASCRIPT-->
+        <!--Seccion PLANTEAMIENTO DE UN SISTEMA-->
         <section>
             <!--Una etiqueta div refiere a divisones entre bloques.-->
             <div class="seccion-javascript">
@@ -256,7 +256,7 @@
 
         <!--Fecha-->
         <p class="fecha">22/02/2023</p>
-        <!--Seccion JAVASCRIPT-->
+        <!--Seccion ELABORACION LOGIN-->
         <section>
             <!--Una etiqueta div refiere a divisones entre bloques.-->
             <div class="seccion-javascript">
@@ -271,7 +271,33 @@
                     y contraseña. Analizamos los componentes del login que son usuario y contraseña, un vinculo que lleva a la pagina de registro en caso 
                     de que el usuario no tenga una cuenta. Al final analizamos que falta poner otro enlace donde el usuario en la posibilidad de no recordar
                     su contraseña, puede recuperarla a través de otro formulario en donde solo pediría el correo, el user y el telefono. Repasamos los 
-                    casos de uso que refieren a las necesidades de usuario
+                    casos de uso que refieren a las necesidades de usuario ante cómo el quiere que funcione un sistema para lograr ciertos objetivos con ello.
+                </p>
+
+        </section>
+
+        
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">23/02/2023</p>
+        <!--Seccion PROPUESTA DE SISTEMA-->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion-javascript">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Propuesta de Sistema Web para una Cafeteria
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    En la creación de un sistema web para la cafeteria de la escuela, generalmente tratamos lo que fue alguna clase de soluciones para los
+                    problemas de la cafeteria, pero de esas "soluciones" también debiamos de identificar sus puntos buenos y sus puntos en contra como
+                    la herramienta de estudio llamado Analisis FODA (igual es conocido como DAFO) que igualmente refiere a las fortalezas y debilidades
+                    de un proyecto. La mayoria estuvo de acuerdo en el uso de tickets para tener una mejor agilidad al tiempo de entrega, pero su gran 
+                    desventaja fue el exceso de filas que podría haber y la saturacion de servidor. Los sistemas Web pueden ser tanto informativos o como
+                    puntos de venta; sociales, entretenidos, educativos, administrativos, busqueda entre otros. Tratamos de buscar una solucion enfocada al
+                    problema en el punto de venta de la cafeteria escolar con el objetivo de que al final el proyecto sea viable y no algo hecho por hacer.
                 </p>
 
         </section>
