--- a/Bitacora/index.html
+++ b/Bitacora/index.html
@@ -302,7 +302,30 @@
 
         </section>
 
+        <hr>
 
+        <!--Fecha-->
+        <p class="fecha">23/02/2023</p>
+        <!--Seccion REPASO -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion-javascript">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Repaso para Examen
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    Repasamos lo que habiamos visto a lo largo del semestre empezando desde qué es HTML, qué tipo de lenguaje es; qué es CSS, para qué sirve,
+                    por qué se maneja por medio de cajas, que es una API, como se llama a una clase de HTML a CSS, qué es un atributo y cómo se estructura en
+                    CSS. A qué nos referimos cuando decimos que es un lenguaje Estándarizado, como funcionan las etiquetas y cuales son, qué es un Material
+                    Design y nuevamente, la importancia de los colores en las páginas web.
+
+                </p>
+
+        </section>
+
+        
         <!--Pie de Pagina con nombre de la organizacion.-->
         <footer class="pie-pagina">
             <h2 class="organizacion">Cetis155</h2>
