--- a/Bitacora/index.html
+++ b/Bitacora/index.html
@@ -22,19 +22,6 @@
             <h6>Lechuga Barba Jammy Dian</h6>
         </header>
 
-        <!--<aside class="lista-seccion">
-            <div class="tabla-secciones">
-                <h3 class="h3-secciones">Secciones.</h3>
-                <ul>
-                    <li>HTML</li>
-                    <li>GitHub</li>
-                    <li>CSS</li>
-                    <li>Como Usar CSS</li>
-                    <li>Recomendaciones sobre Diseño Web</li>
-                </ul>
-            </div>
-        </aside>-->
-
         <!--Fecha-->
         <p class="fecha">01/02/2023</p>
         <!--Secciones. Sirven para crear separadores que tengan que ver con lo que se relata.-->
@@ -231,7 +218,7 @@
         <!--Seccion PLANTEAMIENTO DE UN SISTEMA-->
         <section>
             <!--Una etiqueta div refiere a divisones entre bloques.-->
-            <div class="seccion-javascript">
+            <div class="seccion-Planteamiento Sistema">
                 <!--Subtitulos-->
                 <h1 class="subtitulos">
                     Planteamiento de un Sistema
@@ -249,6 +236,7 @@
                     codificar un login es que tiene que ser lo más sencillo y entedible posible para la comprension del usuario siendo esta lo más explicita
                     posible.
                 </p>
+            </div>
 
         </section>
 
@@ -259,7 +247,7 @@
         <!--Seccion ELABORACION LOGIN-->
         <section>
             <!--Una etiqueta div refiere a divisones entre bloques.-->
-            <div class="seccion-javascript">
+            <div class="seccion-Login">
                 <!--Subtitulos-->
                 <h1 class="subtitulos">
                     Elaboración de Login
@@ -273,7 +261,7 @@
                     su contraseña, puede recuperarla a través de otro formulario en donde solo pediría el correo, el user y el telefono. Repasamos los 
                     casos de uso que refieren a las necesidades de usuario ante cómo el quiere que funcione un sistema para lograr ciertos objetivos con ello.
                 </p>
-
+            </div>
         </section>
 
         
@@ -284,7 +272,7 @@
         <!--Seccion PROPUESTA DE SISTEMA-->
         <section>
             <!--Una etiqueta div refiere a divisones entre bloques.-->
-            <div class="seccion-javascript">
+            <div class="seccion-Sistema Web">
                 <!--Subtitulos-->
                 <h1 class="subtitulos">
                     Propuesta de Sistema Web para una Cafeteria
@@ -299,7 +287,7 @@
                     puntos de venta; sociales, entretenidos, educativos, administrativos, busqueda entre otros. Tratamos de buscar una solucion enfocada al
                     problema en el punto de venta de la cafeteria escolar con el objetivo de que al final el proyecto sea viable y no algo hecho por hacer.
                 </p>
-
+            </div>
         </section>
 
         <hr>
@@ -322,18 +310,35 @@
                     Design y nuevamente, la importancia de los colores en las páginas web.
 
                 </p>
-
+            </div>
         </section>
 
-        
-        <!--Pie de Pagina con nombre de la organizacion.-->
-        <footer class="pie-pagina">
-            <h2 class="organizacion">Cetis155</h2>
-        </footer>
+        <hr>
 
+        <!--Fecha-->
+        <p class="fecha">06/03/2023</p>
+        <!--Seccion PHP -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion-php">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    PHP
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    PHP es un lenguaje de programacion que funciona desde el lado del servidor y se adapta especialmente al desarrollo web. El puente PHP
+                    conecta al HTML y a su vez a la base de datos. Para que el cliente pueda hacer una consulta al base de datos, el cliente necesita conectarse
+                    a un servidor, el cual consulta al PHP y este ultimo consulta a la base de datos. Su modo de funcionamiento se basa en que, desde el propio
+                    codigo HTML se incrustan scripts de PHP. El tipo de pantallas donde se haria uso del lenguaje PHP serian por ejemplo: Recuperar Contraseña,
+                    Registro, Login y probablemente el Menu.
+                </p>
 
-    <!--Cierre de la etiqueta "<BODY>"-->
-    </body>
-
-<!--Cierre de la etiqueta "<HTML>"-->
-</html>  
+                <div class="img-php">
+                    <img src="Imagenes/PHP.png" alt="PHP" width="250">
+                </div>
+                <div class="img-diagrama">
+                    <img src="Imagenes/diagrama.png" alt="PHP" width="600">
+                </div>
+            </div>
+        </section>
