--- a/Bitacora/index.html
+++ b/Bitacora/index.html
@@ -342,3 +342,236 @@
                 </div>
             </div>
         </section>
+
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">08/03/2023</p>
+        <!--Seccion -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Bitacora: 8 de Marzo, 2023
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    En clases volvimos a retomar el tema de el lenguaje PHP. Nos fue explicando lo que es y algunos ejemplos para posteriormente proseguir
+                    haciendo una pequeña práctica de PHP que básicamente consistía en conectar una base de datos para que por consiguiente poder hacer un
+                    código que permitiera enviar datos a MySQL desde el lenguaje. Si todo salía bien, saldría la función de “echo” en la pantalla afirmando
+                    que las conexiones fueron correctas.
+                </p>
+            </div>
+        </section>
+
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">09/03/2023</p>
+        <!--Seccion -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Bitacora: 9 de Marzo, 2023
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    El maestro nos puso a trabajar elaborando una base de datos y usando código PHP teniendo de referencia los códigos que vimos la clase
+                    anterior, solo que esta vez haciendo uso de HTML e implementando los querys desde ahí.
+                </p>
+            </div>
+        </section>
+
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">13/03/2023</p>
+        <!--Seccion -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Bitacora: 13 de Marzo, 2023
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    Investigamos sobre los distintos tipos de usuario que se encuentran en una base de datos, entre los cuales recuerdo el administrador, 
+                    el de pruebas, los normales, etc. Por ejemplo, los usuarios de prueba son un método para evaluar la funcionalidad e interfaz de un sitio
+                    web. Los usuarios encargados de la administración son quienes tienen los permisos totales para la base de datos.
+                </p>
+            </div>
+        </section>
+
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">15/03/2023</p>
+        <!--Seccion -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Bitacora: 15 de Marzo, 2023
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    He visto videos sobre cómo cifrar una contraseña en php desde base64 e intentaba comprender cómo funcionaban las llaves foráneas en la
+                    base de datos.
+                </p>
+            </div>
+        </section>
+
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">22/03/2023</p>
+        <!--Seccion -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Bitacora: 22 de Marzo, 2023
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    Buscamos cómo hacer conexiones remotas en MySQL para que los administradores pudieran acceder a la misma base de datos y aplicar los
+                    cambios desde ahí. Luego apoyamos a Back-End a seguir estableciendo una conexión a su base de datos.
+                </p>
+            </div>
+        </section>
+
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">23/03/2023</p>
+        <!--Seccion -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Bitacora: 23 de Marzo, 2023
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    Ayudamos al área de Back-End a conectar la base de datos y orientarlos a cómo agregar un archivo de lenguaje PHP por medio de una
+                    etiqueta "FORM" para que por consiguiente enviaran sus consultas a la base de datos.
+                </p>
+            </div>
+        </section>
+
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">27/03/2023</p>
+        <!--Seccion -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Bitacora: 27 de Marzo, 2023
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    Creé la base de datos de productos y ayudé a Back-End a seguir intentando que conectaran la base de datos de productos a su sistema.
+                    A su vez seguía actualizando las tablas de productos.
+                </p>
+            </div>
+        </section>
+
+        
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">29/03/2023</p>
+        <!--Seccion -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Bitacora: 29 de Marzo, 2023
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    Orienté un poco a mi líder para la elaboración de las tablas de MySQL de Rol y el Tipo de Usuario. He seguido haciendo actualizaciones
+                    en la base de datos de productos y seguir intentando apoyar a Back-End con las conexiones a las bases de datos.
+                </p>
+            </div>
+        </section>
+
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">03/04/2023</p>
+        <!--Seccion -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Bitacora: 03 de Abril, 2023
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    He ayudado a Back-End a que su tabla de productos mostrara los datos que hay en la base de datos, e igual ayudar a investigar
+                    como encriptar una contraseña.
+                </p>
+            </div>
+        </section>
+
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">05/04/2023</p>
+        <!--Seccion -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Bitacora: 05 de Abril, 2023
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    Completamos la tabla de productos actualizándolos ahora con 100 junto con su descripción y fotos de cada alimento incluidas. 
+                </p>
+        </section>
+
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">10/04/2023</p>
+        <!--Seccion -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Bitacora: 10 de Abril, 2023
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    Hemos seguido investigando lo de Carga Masiva con archivos de Excel mediante videos de Youtube e intentando apoyar a Back-End por
+                    órdenes de nuestro líder para que las tablas de productos mostraran los datos que vienen ingresados en nuestras tablas.
+                </p>
+        </section>
+        
+
+        <!--Pie de Pagina con nombre de la organizacion.-->
+        <footer class="pie-pagina">
+            <h2 class="organizacion">Cetis155</h2>
+        </footer>
+
+    <!--Cierre de la etiqueta "<BODY>"-->
+    </body>
+
+<!--Cierre de la etiqueta "<HTML>"-->
+</html>  
