--- a/Bitacora/index.html
+++ b/Bitacora/index.html
@@ -563,6 +563,110 @@
                     órdenes de nuestro líder para que las tablas de productos mostraran los datos que vienen ingresados en nuestras tablas.
                 </p>
         </section>
+
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">17/04/2023</p>
+        <!--Seccion -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Bitacora: 17 de Abril, 2023
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    Mi lider de area preguntó al maestro como se crean o como funcionan las tablas temporales, es basicamente una tabla con su id y 
+                    codigo de usuario (id_usuario) que funciona para almacenar los productos que guarda un cliente en el carrito de compras que permanece
+                    durante un tiempo hasta que el usuario decide comprarlo. Ahi es donde esos datos pasan a otra tabla (proablemente la de historial)
+                    en donde ahora se guardan los productos ya comprados. Durante la clase mi lider y yo hemos intentado entender el concepto de la 
+                    tabla temporal y como hacerla funcionar.
+                </p>
+        </section>
+
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">18/04/2023</p>
+        <!--Seccion -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Bitacora: 18 de Abril, 2023
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    Gerardo explicó como se debia de entregar el proyecto final y que ibamos a hacer con él en frente del tio, practicamente explicandole
+                    nuestro sistema si es, con suerte, de su interes. El proyecto se entrega antes del Lunes 29, antes de las 10 a.m. Luego de eso, Natalia
+                    volvio a llenar la tabla de productos porque se habian eliminado algunos datos mientras yo ayudaba al equipo de Back-End y Front-End 
+                    investigando sobre los querys y como hacerlos servir en su codigo.
+                </p>
+        </section>
+
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">22/04/2023</p>
+        <!--Seccion -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Bitacora: 22 de Abril, 2023
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    Esta clase nos quedamos casi las 2 horas de clase fuera del salon platicando nuestro Scrum Master, Base de Datos y Back-End solucionando
+                    gran parte de nuestras dudas o buscando modos de trabajar juntos para agilizar más el trabajo. Yo y mi lider de area solo estabamos
+                    preguntando sobre como seria el funcionamiento de la tabla temporal o la estructura de la base de datos porque resulta un poco confuso. 
+                    Back-End por su parte, solo pidio los Querys e hizo preguntas respectivas de su propia area. Al final de la clase, nuestro Scrum Master
+                    nos pidio hacer un Word con todas las preguntas que tuvieramos para darselas a saber a Gerardo.
+                </p>
+        </section>
+
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">24/04/2023</p>
+        <!--Seccion -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Bitacora: 24 de Abril, 2023
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    En clase, mi lider de area Natalia hizo las preguntas del Word al maestro sobre la estructura de datos y las tablas, ademas de ir a enseñarle
+                    nuestra tabla de productos para comprobar si los datos en ella eran correctos. Al final eliminamos los que creiamos innecesarios y arreglamos
+                    todos los posibles errores que pudieron estar en nuestra base de datos, dandolo, por hoy, acabado.  
+                </p>
+        </section>
+
+        <hr>
+
+        <!--Fecha-->
+        <p class="fecha">26/04/2023</p>
+        <!--Seccion -->
+        <section>
+            <!--Una etiqueta div refiere a divisones entre bloques.-->
+            <div class="seccion">
+                <!--Subtitulos-->
+                <h1 class="subtitulos">
+                    Bitacora: 26 de Abril, 2023
+                </h1>
+                <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
+                <p class="texto"> 
+                    Hoy traté de ayudar a Back-End a buscar querys que tengan la funcion de mandar los productos seleccionados por el usuario a la tabla de carrito
+                    y luego un query que eliminara todos los registros de la tabla de carrito una vez que el usuario comprara sus productos. 
+                </p>
+        </section>
         
 
         <!--Pie de Pagina con nombre de la organizacion.-->
